--- a/frontend_doc/frontend_test_final.ipynb
+++ b/frontend_doc/frontend_test_final.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOmhq+Jc2oWlJRaeVwm1pIq",
+      "authorship_tag": "ABX9TyMhYoGBWiqLTYIjY5Mr8me+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,82 +102,70 @@
         "import 'agent_screen.dart';\n",
         "\n",
         "class CrewScreen extends StatelessWidget {\n",
+        "  final List<Offset> chairPositions = [\n",
+        "    Offset(0.25, 0.4),\n",
+        "    Offset(0.75, 0.4),\n",
+        "    Offset(0.25, 0.7),\n",
+        "    Offset(0.75, 0.7),\n",
+        "  ];\n",
+        "\n",
         "  @override\n",
         "  Widget build(BuildContext context) {\n",
         "    return Scaffold(\n",
         "      appBar: AppBar(title: Text('OrchestrAI')),\n",
         "      body: Consumer<CrewModel>(\n",
         "        builder: (context, crewModel, child) {\n",
-        "          return Column(\n",
+        "          return Stack(\n",
         "            children: [\n",
-        "              TextField(\n",
-        "                decoration: InputDecoration(labelText: 'Crew Name'),\n",
-        "                controller: TextEditingController(text: crewModel.crewName),\n",
-        "                onChanged: (value) => crewModel.setCrewName(value),\n",
+        "              Image.asset(\n",
+        "                'assets/main.png',\n",
+        "                fit: BoxFit.cover,\n",
+        "                width: double.infinity,\n",
+        "                height: double.infinity,\n",
         "              ),\n",
-        "              Expanded(\n",
-        "                child: GridView.builder(\n",
-        "                  gridDelegate: SliverGridDelegateWithFixedCrossAxisCount(\n",
-        "                    crossAxisCount: 2,\n",
-        "                    childAspectRatio: 0.75,\n",
+        "              ...List.generate(4, (index) {\n",
+        "                return Positioned(\n",
+        "                  left: MediaQuery.of(context).size.width *\n",
+        "                      chairPositions[index].dx,\n",
+        "                  top: MediaQuery.of(context).size.height *\n",
+        "                      chairPositions[index].dy,\n",
+        "                  child: GestureDetector(\n",
+        "                    onTap: () {\n",
+        "                      if (index < crewModel.agents.length) {\n",
+        "                        Navigator.push(\n",
+        "                          context,\n",
+        "                          MaterialPageRoute(\n",
+        "                            builder: (context) =>\n",
+        "                                AgentScreen(agentIndex: index),\n",
+        "                          ),\n",
+        "                        );\n",
+        "                      } else if (crewModel.agents.length < 4) {\n",
+        "                        crewModel.addAgent(AgentModel());\n",
+        "                        Navigator.push(\n",
+        "                          context,\n",
+        "                          MaterialPageRoute(\n",
+        "                            builder: (context) => AgentScreen(\n",
+        "                                agentIndex: crewModel.agents.length - 1),\n",
+        "                          ),\n",
+        "                        );\n",
+        "                      } else {\n",
+        "                        ScaffoldMessenger.of(context).showSnackBar(\n",
+        "                          SnackBar(\n",
+        "                              content:\n",
+        "                                  Text('Maximum number of agents reached')),\n",
+        "                        );\n",
+        "                      }\n",
+        "                    },\n",
+        "                    child: SizedBox(\n",
+        "                      width: 100,\n",
+        "                      height: 100,\n",
+        "                      child: index < crewModel.agents.length\n",
+        "                          ? Image.asset('assets/agent_${index + 1}.png')\n",
+        "                          : Image.asset('assets/chair.png'),\n",
+        "                    ),\n",
         "                  ),\n",
-        "                  itemCount: 4,\n",
-        "                  itemBuilder: (context, index) {\n",
-        "                    if (index < crewModel.agents.length) {\n",
-        "                      final agent = crewModel.agents[index];\n",
-        "                      return GestureDetector(\n",
-        "                        onTap: () {\n",
-        "                          Navigator.push(\n",
-        "                            context,\n",
-        "                            MaterialPageRoute(\n",
-        "                              builder: (context) =>\n",
-        "                                  AgentScreen(agentIndex: index),\n",
-        "                            ),\n",
-        "                          );\n",
-        "                        },\n",
-        "                        child: Card(\n",
-        "                          child: Column(\n",
-        "                            mainAxisAlignment: MainAxisAlignment.center,\n",
-        "                            children: [\n",
-        "                              Image.asset(\n",
-        "                                'assets/agent_${agent.name.toLowerCase()}.png',\n",
-        "                                height: 100,\n",
-        "                              ),\n",
-        "                              Text(agent.name),\n",
-        "                              Text(agent.role),\n",
-        "                            ],\n",
-        "                          ),\n",
-        "                        ),\n",
-        "                      );\n",
-        "                    } else {\n",
-        "                      return GestureDetector(\n",
-        "                        onTap: () {\n",
-        "                          crewModel.addAgent(AgentModel());\n",
-        "                          Navigator.push(\n",
-        "                            context,\n",
-        "                            MaterialPageRoute(\n",
-        "                              builder: (context) => AgentScreen(\n",
-        "                                  agentIndex: crewModel.agents.length - 1),\n",
-        "                            ),\n",
-        "                          );\n",
-        "                        },\n",
-        "                        child: Card(\n",
-        "                          child: Column(\n",
-        "                            mainAxisAlignment: MainAxisAlignment.center,\n",
-        "                            children: [\n",
-        "                              Image.asset(\n",
-        "                                'assets/empty_agent.png',\n",
-        "                                height: 100,\n",
-        "                              ),\n",
-        "                              Text('Add New Agent'),\n",
-        "                            ],\n",
-        "                          ),\n",
-        "                        ),\n",
-        "                      );\n",
-        "                    }\n",
-        "                  },\n",
-        "                ),\n",
-        "              ),\n",
+        "                );\n",
+        "              }),\n",
         "            ],\n",
         "          );\n",
         "        },\n",
@@ -253,21 +241,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## widgets/component_sidebar.dart\n",
-        "(삭제)\n",
-        "\n",
-        "## : 좌측 컴포넌트 사이드 바 (펼쳐보기 기능 추가), 2개의 screen에 추가\n",
-        "\n",
-        "## 수정 : main screen에서 의자 위젯(버트) Agent add 기능 추가"
-      ],
-      "metadata": {
-        "id": "qEh_H2Lji8GE"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## widgents/crew_table.dart"
+        "## widgents/component_sidebar.dart\n"
       ],
       "metadata": {
         "id": "SyQJBIuL-DJq"
@@ -276,37 +250,138 @@
     {
       "cell_type": "code",
       "source": [
-        "import 'package:flutter/material.dart';\n",
+        "# import 'package:flutter/material.dart';\n",
         "\n",
-        "class CrewTable extends StatelessWidget {\n",
-        "  final Function(int) onAgentTap;\n",
-        "\n",
-        "  CrewTable({required this.onAgentTap});\n",
-        "\n",
+        "# class ComponentSidebar extends StatelessWidget {\n",
         "  @override\n",
-        "  Widget build(BuildContext context) {\n",
-        "    return GridView.builder(\n",
-        "      gridDelegate: SliverGridDelegateWithFixedCrossAxisCount(\n",
-        "        crossAxisCount: 2,\n",
-        "        childAspectRatio: 1.5,\n",
-        "      ),\n",
-        "      itemCount: 4,\n",
-        "      itemBuilder: (context, index) {\n",
-        "        return GestureDetector(\n",
-        "          onTap: () => onAgentTap(index),\n",
-        "          child: Card(\n",
-        "            child: Center(\n",
-        "              child: Text('Agent ${index + 1}'),\n",
-        "            ),\n",
-        "          ),\n",
-        "        );\n",
-        "      },\n",
+        "#   Widget build(BuildContext context) {\n",
+        "#     return Drawer(\n",
+        "#       child: ListView(\n",
+        "#         children: [\n",
+        "#           ExpansionTile(\n",
+        "#             title: Text('Agents'),\n",
+        "#             children: [\n",
+        "#               ListTile(\n",
+        "#                 leading: Image.asset('assets/head.png', height: 30),\n",
+        "#                 title: Text('Agent 1'),\n",
+        "#               ),\n",
+        "#               ListTile(\n",
+        "#                 leading: Image.asset('assets/head.png', height: 30),\n",
+        "#                 title: Text('Agent 2'),\n",
+        "#               ),\n",
+        "#             ],\n",
+        "#           ),\n",
+        "#           ExpansionTile(\n",
+        "#             title: Text('Tasks'),\n",
+        "#             children: [\n",
+        "#               ListTile(\n",
+        "#                 leading: Image.asset('assets/body.png', height: 30),\n",
+        "#                 title: Text('Task 1'),\n",
+        "#               ),\n",
+        "#               ListTile(\n",
+        "#                 leading: Image.asset('assets/body.png', height: 30),\n",
+        "#                 title: Text('Task 2'),\n",
+        "#               ),\n",
+        "#             ],\n",
+        "#           ),\n",
+        "#           ExpansionTile(\n",
+        "#             title: Text('Tools'),\n",
+        "#             children: [\n",
+        "#               ListTile(\n",
+        "#                 leading: Image.asset('assets/tool.png', height: 30),\n",
+        "#                 title: Text('Tool 1'),\n",
+        "#               ),\n",
+        "#               ListTile(\n",
+        "#                 leading: Image.asset('assets/tool.png', height: 30),\n",
+        "#                 title: Text('Tool 2'),\n",
+        "#               ),\n",
+        "#             ],\n",
+        "#           ),\n",
+        "#         ],\n",
+        "#       ),\n",
+        "#     );\n",
+        "#   }\n",
+        "# }"
+      ],
+      "metadata": {
+        "id": "yqSpolEG-DRw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## widgets/agent_assembly.dart\n",
+        "\n",
+        ": 조립이 완성된 Agent 이미지를 메인 화면으로 렌더링 하기 위한 모듈"
+      ],
+      "metadata": {
+        "id": "Gex6Uy2pc7lv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import 'dart:io';\n",
+        "import 'package:flutter/material.dart';\n",
+        "import 'package:path_provider/path_provider.dart';\n",
+        "import 'package:image/image.dart' as img;\n",
+        "\n",
+        "class AgentAssembly {\n",
+        "  static Future<String> assembleAndSaveAgent(String head, String body, String tool) async {\n",
+        "    // Load images\n",
+        "    final headImage = await loadImage(head);\n",
+        "    final bodyImage = await loadImage(body);\n",
+        "    final toolImage = await loadImage(tool);\n",
+        "\n",
+        "    // Create a new image to compose on\n",
+        "    final compositeImage = img.Image(300, 400); // Adjust size as needed\n",
+        "\n",
+        "    // Compose images\n",
+        "    img.compositeImage(compositeImage, headImage, dstX: 100, dstY: 0);\n",
+        "    img.compositeImage(compositeImage, bodyImage, dstX: 50, dstY: 150);\n",
+        "    img.compositeImage(compositeImage, toolImage, dstX: 200, dstY: 200);\n",
+        "\n",
+        "    // Save the composite image\n",
+        "    final tempDir = await getTemporaryDirectory();\n",
+        "    final file = File('${tempDir.path}/agent_${DateTime.now().millisecondsSinceEpoch}.png');\n",
+        "    await file.writeAsBytes(img.encodePng(compositeImage));\n",
+        "\n",
+        "    return file.path;\n",
+        "  }\n",
+        "\n",
+        "  static Future<img.Image> loadImage(String assetPath) async {\n",
+        "    final ByteData data = await rootBundle.load(assetPath);\n",
+        "    return img.decodeImage(data.buffer.asUint8List())!;\n",
+        "  }\n",
+        "}\n",
+        "\n",
+        "class AgentModel {\n",
+        "  String name;\n",
+        "  String headAsset;\n",
+        "  String bodyAsset;\n",
+        "  String toolAsset;\n",
+        "  String? compositePath;\n",
+        "\n",
+        "  AgentModel({\n",
+        "    required this.name,\n",
+        "    required this.headAsset,\n",
+        "    required this.bodyAsset,\n",
+        "    required this.toolAsset,\n",
+        "  });\n",
+        "\n",
+        "  Future<void> assembleImage() async {\n",
+        "    compositePath = await AgentAssembly.assembleAndSaveAgent(\n",
+        "      headAsset,\n",
+        "      bodyAsset,\n",
+        "      toolAsset,\n",
         "    );\n",
         "  }\n",
         "}"
       ],
       "metadata": {
-        "id": "yqSpolEG-DRw"
+        "id": "mVWXNVv4c7wE"
       },
       "execution_count": null,
       "outputs": []
